<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".MainActivity5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="405dp"
        android:contentDescription="@string/Pendiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pendiente"
        tools:srcCompat="@drawable/pendiente" />

    <TextView
        android:id="@+id/tvpendiente"
        android:layout_width="324dp"
        android:layout_height="106dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:breakStrategy="simple"
        android:bufferType="normal"
        android:rotationX="-19"
        android:text="@string/Pendiente"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton_recta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="26dp"
        android:text="@string/Botonrecta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/x1" />

    <EditText
        android:id="@+id/tv_resultado_recta"
        android:layout_width="144dp"
        android:layout_height="53dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="135dp"
        android:ems="10"
        android:hint="La pendiente es"
        android:inputType="number"
        android:textColorHint="#F3EBEB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_recta" />

    <EditText
        android:id="@+id/y2"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/y2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFCFC"
        app:layout_constraintBottom_toTopOf="@+id/y1"
        app:layout_constraintEnd_toStartOf="@+id/x2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/y1"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/y1"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFCFC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/y2" />

    <EditText
        android:id="@+id/x2"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/x2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFCFC"
        app:layout_constraintStart_toEndOf="@+id/y2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/x1"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/x1"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFCFC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>